test from new folder

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ex2",
   "version": "1.0.0",
-  "description": "",
+  "description": "example for the basic express and ejs usage",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +13,13 @@
     "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
     "express-minify-html-2": "^1.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alexvirtech/ejs-introduction.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alexvirtech/ejs-introduction/issues"
+  },
+  "homepage": "https://github.com/alexvirtech/ejs-introduction#readme"
 }
